--- a/Android/Fitforma1/app/src/main/AndroidManifest.xml
+++ b/Android/Fitforma1/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Fitforma1"
         tools:targetApi="31">
         <activity
+            android:name=".foodSearchActivity"
+            android:exported="false" />
+        <activity
             android:name=".RegisterActivity"
             android:exported="false" />
         <activity
