--- a/Android/FitForma/FitForma/app/src/main/AndroidManifest.xml
+++ b/Android/FitForma/FitForma/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.FitForma"
         tools:targetApi="31">
         <activity
+            android:name=".ui.Food_Detail"
+            android:exported="false" />
+        <activity
             android:name=".ui.account.AccountActivity"
             android:exported="false" />
         <activity
