--- a/Android/FitForma/FitForma/app/src/main/AndroidManifest.xml
+++ b/Android/FitForma/FitForma/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.FitForma"
         tools:targetApi="31">
         <activity
-            android:name=".ui.Food_Detail"
+            android:name=".ui.Scan.ScanActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.Food_Detail.Food_Detail"
             android:exported="false" />
         <activity
             android:name=".ui.account.AccountActivity"
