Revert "Merge branch 'main' into android-development"
This reverts commit 2ce98c4602f422b8558d4d7a89911c0f88a606aa, reversing
changes made to b5fc8c88a639d92846f6a681fce64290f5a32790.

--- a/Android/FitForma/FitForma/app/src/main/AndroidManifest.xml
+++ b/Android/FitForma/FitForma/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/Theme.FitForma"
         tools:targetApi="31">
         <activity
-            android:name=".ui.slider.PersonInfoActivity"
+            android:name=".ui.Scan.ScanActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.food.DetailActivity"
+            android:name=".ui.Food_Detail.Food_Detail"
             android:exported="false" />
         <activity
             android:name=".ui.account.AccountActivity"
