--- a/Android/FitForma/FitForma/app/src/main/AndroidManifest.xml
+++ b/Android/FitForma/FitForma/app/src/main/AndroidManifest.xml
@@ -2,21 +2,29 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FitForma"
-        tools:targetApi="31">
+        tools:targetApi="tiramisu">
         <activity
-            android:name=".ui.slider.PersonInfoActivity"
+            android:name=".ui.search.SearchActivity"
             android:exported="false" />
         <activity
             android:name=".ui.food.DetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.slider.PersonInfoActivity"
             android:exported="false" />
         <activity
             android:name=".ui.account.AccountActivity"
@@ -39,10 +47,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <meta-data
-            android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
