--- a/Android/FitForma/FitForma/app/src/main/AndroidManifest.xml
+++ b/Android/FitForma/FitForma/app/src/main/AndroidManifest.xml
@@ -2,8 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-feature android:name="android.hardware.camera" />
+
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
@@ -17,6 +19,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FitForma"
         tools:targetApi="tiramisu">
+        <activity
+            android:name=".ui.search.ResultActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.search.SearchActivity"
             android:exported="false" />
