--- a/Android/FitForma/FitForma/local.properties
+++ b/Android/FitForma/FitForma/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Dec 11 12:25:05 WIB 2023
-sdk.dir=C\:\\Users\\ASUS\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\exoni\\AppData\\Local\\Android\\Sdk
